# MahkrabCLI

./: .gitignore  .vscodeignore  PUBLISHING.md  README.md  main.py  pyproject.toml
archive/: prev_cexec.py.py  prev_main.py.py  prev_terry.txt.txt  test_func-main.py.py  tree2.py  x.py
src/: constants.py  entry.py  handler.py  main.py
src/func/: cexec.py  pyexec.py  run.py  terry.py
src/mahkrab/: cli.py  constants.py
src/mahkrab/assets/: headerTable.py
src/mahkrab/func/: asmexec.py  binexec.py  cexec.py  pyexec.py  run.py  tree.py
src/mahkrab/func/executors/compiled/: asmexec.py  binexec.py  cexec.py  cmdexec.py  cppexec.py  goexec.py  javaexec.py  rustexec.py
src/mahkrab/func/executors/interpreted/: interpexec.py  pyexec.py  sqlexec.py
src/mahkrab/tools/: config.py  findDependencies.py  headerTable.py  parser.py  tooloverride.py
src/mahkrab/tools/ccpp/: findDependencies.py
src/mahkrab/tools/decorators/: timed.py  timers.py
src/tools/: parser.py
test/: test.c  test.py
tests/: atom.c  curl.c  gtk.c  hello.asm  hello.c  insert.c  math.c  pthread.c  sqlite.c  test  test.c  test_language_support.py
