[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahkrab"
version = "0.0.1"
requires-python = ">=3.10"
readme = "README.md"
description = "MAHKRAB CLI tool"

[project.scripts]
mahkrab = "mahkrab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]